--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nrwl/angular": "12.10.0",
+    "mongodb": "^4.2.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
@@ -48,7 +49,7 @@
     "@nrwl/tao": "12.10.0",
     "@nrwl/workspace": "12.10.0",
     "@types/jest": "27.0.2",
-    "@types/node": "14.14.33",
+    "@types/node": "^14.14.33",
     "@typescript-eslint/eslint-plugin": "~4.31.1",
     "@typescript-eslint/parser": "~4.31.1",
     "cypress": "^8.3.0",
@@ -57,6 +58,7 @@
     "eslint-plugin-cypress": "^2.10.3",
     "jest": "27.2.3",
     "jest-preset-angular": "10.0.1",
+    "ng-packagr": "^12.1.1",
     "prettier": "^2.3.1",
     "ts-jest": "27.0.5",
     "typescript": "~4.3.5"
