--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,6 +17,7 @@
     "paths": {
       "@jd/api-interfaces": ["libs/api-interfaces/src/index.ts"],
       "@xprjs/messenger-components": ["libs/messenger-components/src/index.ts"],
+      "@xprjs/messenger-components/messenger-menu": ["libs/messenger-components/messenger-menu/src/index.ts"],
       "@xprjs/messenger-data": ["libs/messenger-data/src/index.ts"],
       "@xprjs/user-data": ["libs/user-data/src/index.ts"]
     }
