--- a/package.json
+++ b/package.json
@@ -11,46 +11,47 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^12.2.0",
-    "@angular/cdk": "^12.2.13",
-    "@angular/common": "^12.2.0",
-    "@angular/compiler": "^12.2.0",
-    "@angular/core": "^12.2.0",
-    "@angular/forms": "^12.2.0",
-    "@angular/material": "^12.2.13",
-    "@angular/platform-browser": "^12.2.0",
-    "@angular/platform-browser-dynamic": "^12.2.0",
-    "@angular/router": "^12.2.0",
+    "@angular/animations": "13.0.3",
+    "@angular/cdk": "13.0.3",
+    "@angular/common": "13.0.3",
+    "@angular/compiler": "13.0.3",
+    "@angular/core": "13.0.3",
+    "@angular/forms": "13.0.3",
+    "@angular/material": "13.0.3",
+    "@angular/platform-browser": "13.0.3",
+    "@angular/platform-browser-dynamic": "13.0.3",
+    "@angular/router": "13.0.3",
     "@nestjs/common": "^7.0.0",
+    "@nestjs/config": "^1.1.5",
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
-    "@nrwl/angular": "12.10.0",
-    "@nrwl/storybook": "^13.2.3",
+    "@nrwl/angular": "13.2.4",
+    "@nrwl/storybook": "13.2.4",
     "mongodb": "^4.2.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.0",
-    "@angular-eslint/eslint-plugin": "~12.3.0",
-    "@angular-eslint/eslint-plugin-template": "~12.3.0",
-    "@angular-eslint/template-parser": "~12.3.0",
-    "@angular/cli": "~12.2.0",
-    "@angular/compiler-cli": "^12.2.0",
-    "@angular/language-service": "^12.2.0",
+    "@angular-devkit/build-angular": "13.0.4",
+    "@angular-eslint/eslint-plugin": "12.6.1",
+    "@angular-eslint/eslint-plugin-template": "12.6.1",
+    "@angular-eslint/template-parser": "12.6.1",
+    "@angular/cli": "13.0.4",
+    "@angular/compiler-cli": "13.0.3",
+    "@angular/language-service": "13.0.3",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
-    "@nrwl/cli": "12.10.0",
-    "@nrwl/cypress": "12.10.0",
-    "@nrwl/eslint-plugin-nx": "12.10.0",
-    "@nrwl/jest": "12.10.0",
-    "@nrwl/linter": "12.10.0",
-    "@nrwl/nest": "12.10.0",
-    "@nrwl/node": "12.10.0",
-    "@nrwl/tao": "12.10.0",
-    "@nrwl/workspace": "12.10.0",
+    "@nrwl/cli": "13.2.4",
+    "@nrwl/cypress": "13.2.4",
+    "@nrwl/eslint-plugin-nx": "13.2.4",
+    "@nrwl/jest": "13.2.4",
+    "@nrwl/linter": "13.2.4",
+    "@nrwl/nest": "13.2.4",
+    "@nrwl/node": "13.2.4",
+    "@nrwl/tao": "13.2.4",
+    "@nrwl/workspace": "13.2.4",
     "@types/jest": "27.0.2",
     "@types/node": "^14.14.33",
     "@typescript-eslint/eslint-plugin": "~4.31.1",
@@ -60,10 +61,10 @@
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
     "jest": "27.2.3",
-    "jest-preset-angular": "10.0.1",
-    "ng-packagr": "^12.1.1",
+    "jest-preset-angular": "11.0.0",
+    "ng-packagr": "13.0.8",
     "prettier": "^2.3.1",
     "ts-jest": "27.0.5",
-    "typescript": "~4.3.5"
+    "typescript": "4.4.4"
   }
 }
